Fix the spacing and colors in the accordion

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+/*** Author: Sri Nithiksha
+     Reference: Chatgpt, w3schools, javatpoint
+***/
+
 /* Variables for colors */
 :root {
   /* Grayscale Colors */
@@ -752,11 +756,8 @@ ol {
   cursor: pointer;
   padding: 18px;
   width: 100%;
-  margin-top: 10px;
   border: none;
-  text-align: left;
   outline: none;
-  font-size: 15px;
   transition: 0.4s;
 }
 
@@ -773,7 +774,7 @@ ol {
 }
 
 .c-panel {
-  padding: 0 18px;
+  padding: 0 20px;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.5s ease-in-out;
